<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.xavax</groupId>
  <artifactId>xcore</artifactId>
  <version>1.1.7</version>
  <name>Xavax Core Library</name>
  <url>http://www.xavax.com</url>
  <description>Core classes used by other Xavax projects.</description>
  <licenses>
    <license>
      <name>Xavax Open Source License</name>
      <url>http://www.xavax.com/xosl.html</url>
      <distribution>repo</distribution>
      <comments>Go to the URL to view the details.</comments>
    </license>
  </licenses>
  <organization>
    <name>Xavax, Inc.</name>
    <url>http://www.xavax.com</url>
  </organization>
  <scm>
    <url>https://github.com/xavax/xcore</url>
  </scm>
  <developers>
    <developer>
      <id>alvitar</id>
      <name>Phillip L Harbison</name>
      <email>alvitar@xavax.com</email>
      <url>http://www.xavax.com/alvitar/</url>
      <organization>Xavax, Inc.</organization>
      <organizationUrl>http://www.xavax.com/</organizationUrl>
      <roles>
        <role>architect</role>
        <role>developer</role>
      </roles>
      <timezone>America/New_York</timezone>
      <properties>
        <picUrl>http://www.xavax.com/alvitar/phil.jpg</picUrl>
      </properties>
    </developer>
  </developers>
  <build>
    <sourceDirectory>src/main/java</sourceDirectory>
    <testSourceDirectory>src/test/java</testSourceDirectory>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.11.0</version>
        <configuration>
          <release>11</release>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-gpg-plugin</artifactId>
        <version>3.1.0</version>
        <executions>
          <execution>
            <id>sign-artifacts</id>
            <phase>verify</phase>
            <goals>
              <goal>sign</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.5.0</version>
        <configuration>
          <doclint>none</doclint>
        </configuration>
        <executions>  
          <execution>
            <id>attach-javadocs</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>3.3.0</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar</goal>
              <goal>test-jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
  <dependencies>
    <dependency>
      <groupId>junit</groupId>
  	  <artifactId>junit</artifactId>
  	  <version>4.13</version>
  	  <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-lang3</artifactId>
      <version>3.1</version>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-text</artifactId>
      <version>1.3</version>
    </dependency>
    <dependency> 
  	  <groupId>org.slf4j</groupId>
  	  <artifactId>slf4j-log4j12</artifactId>
  	  <version>1.8.0-beta2</version>
	</dependency>
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-api</artifactId>
      <version>2.20.0</version>
    </dependency>
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-core</artifactId>
      <version>2.20.0</version>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-all</artifactId>
      <version>2.0.2-beta</version>
    </dependency>
	<dependency>
      <groupId>org.reflections</groupId>
      <artifactId>reflections</artifactId>
      <version>0.10.2</version>
    </dependency>
  </dependencies>
  <distributionManagement>
    <repository>
      <id>sonatype</id>
      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
    </repository>
  </distributionManagement>
</project>
